# hiphopbasstabs

./: .dockerignore  .gitignore  Dockerfile  INITIAL.md  README.md  comprehensive_debug.js  debug_database.py  debug_playwright.js  debug_validation.py  docker-compose.yml  final_validation.js  index.html  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  test_vercel_deployment.js  tsconfig.json  vercel.json
PRPs/: bass-tab-site.md
app/: page.tsx
app/api/pairs/: route.ts
app/api/pairs/[slug]/: route.ts
app/pairs/[slug]/: page.tsx
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: pairs.py
backend/app/core/: config.py  security.py
backend/app/utils/: schema_export.py
backend/schemas/: bar_marker.schema.json  page_payload.schema.json  tab.schema.json
backend/tests/: test_api.py  test_schemas.py
components/: LoadingSkeleton.tsx  TabDisplay.tsx  VideoPlayer.tsx
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/api/health/: route.ts
frontend/app/pairs/: page.tsx
frontend/schemas/: health_check.schema.json  track.schema.json
frontend/types/: schema.d.ts
schemas/: all.schema.json  error_detail.schema.json  original.schema.json  sample_map.schema.json
scripts/: bass_sample_scraper.py  batch_classics.txt  generate-types.js  more_classics.json  new_classics.json  new_tracks.json  top_100_golden_era.txt  tracks_to_scrape.txt
